N°4460 - Fix "load more entries" activity panel buttons contrast in Darkmoon

--- a/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
+++ b/datamodels/2.x/combodo-backoffice-darkmoon-theme/scss/scss-variables.scss
@@ -189,6 +189,7 @@ $ibo-tab-container--extra-tab-toggler--background-color--on-hover: $ibo-color-gr
 $ibo-activity-panel--header--background-color: $ibo-color-grey-400;
 $ibo-activity-panel--tab-toggler--is-active--background-color: $ibo-color-grey-200;
 $ibo-activity-panel--tab-toolbar--background-color: $ibo-activity-panel--tab-toggler--is-active--background-color;
+$ibo-activity-panel--load-entries-button--background-color: $ibo-color-grey-500;
 $ibo-caselog-entry-form--background-color: $ibo-activity-panel--tab-toolbar--background-color;
 $ibo-object-details--tag--separator--background-color: $ibo-color-grey-300;
 
